Closed Bug 1541873 Opened 5 years ago Closed 5 years ago

Perma dom/workers/test/test_worker_interfaces.html | false: If this is failing: DANGER, are you sure you want to expose the new interface BigInt64Array to all webpages as a property on the worker? - when Gecko 68 merges to Beta on 2019-05-06

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla68
Tracking Status
firefox-esr60 --- unaffected
firefox66 --- unaffected
firefox67 --- unaffected
firefox68 + verified

People

(Reporter: opoprus, Assigned: terpri)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

[Tracking Requested - why for this release]:

Central as beta simulation

Treeherder link: https://treeherder.mozilla.org/#/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception%2Cusercancel%2Crunnable&revision=d71d7b6e68ea9dbc465c9da13913c331c22dad4c&selectedJob=238129833

Failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=238129833&repo=try&lineNumber=2824

[task 2019-04-04T12:58:19.219Z] 12:58:19 INFO - TEST-START | dom/workers/test/test_worker_interfaces.html
[task 2019-04-04T12:58:20.479Z] 12:58:20 INFO - TEST-UNEXPECTED-FAIL | dom/workers/test/test_worker_interfaces.html | false: If this is failing: DANGER, are you sure you want to expose the new interface BigInt64Array to all webpages as a property on the worker? Do not make a change to this file without a review from a DOM peer for that specific change!!! (or a JS peer for changes to ecmaGlobals)
[task 2019-04-04T12:58:20.480Z] 12:58:20 INFO - SimpleTest.ok@SimpleTest/SimpleTest.js:275:18
[task 2019-04-04T12:58:20.480Z] 12:58:20 INFO - workerTestExec/worker.onmessage@dom/workers/test/worker_driver.js:36:7
[task 2019-04-04T12:58:20.481Z] 12:58:20 INFO - Not taking screenshot here: see the one that was previously logged
[task 2019-04-04T12:58:20.482Z] 12:58:20 INFO - TEST-UNEXPECTED-FAIL | dom/workers/test/test_worker_interfaces.html | false: If this is failing: DANGER, are you sure you want to expose the new interface BigUint64Array to all webpages as a property on the worker? Do not make a change to this file without a review from a DOM peer for that specific change!!! (or a JS peer for changes to ecmaGlobals)
[task 2019-04-04T12:58:20.482Z] 12:58:20 INFO - SimpleTest.ok@SimpleTest/SimpleTest.js:275:18
[task 2019-04-04T12:58:20.482Z] 12:58:20 INFO - workerTestExec/worker.onmessage@dom/workers/test/worker_driver.js:36:7
[task 2019-04-04T12:58:20.482Z] 12:58:20 INFO - GECKO(1068) | OK: true => true: If this is failing: DANGER, are you sure you want to expose the new interface DOMStringList to all webpages as a property on the worker? Do not make a change to this file without a review from a DOM peer for that specific change!!! (or a JS peer for changes to ecmaGlobals)
[task 2019-04-04T12:58:20.482Z] 12:58:20 INFO - GECKO(1068) | OK: true => true: If this is failing: DANGER, are you sure you want to expose the new interface Directory to all webpages as a property on the worker? Do not make a change to this file without a review from a DOM peer for that specific change!!! (or a JS peer for changes to ecmaGlobals)
[task 2019-04-04T12:58:20.483Z] 12:58:20 INFO - GECKO(1068) | OK: true => true: If this is failing: DANGER, are you sure you want to expose the new interface ErrorEvent to all webpages as a property on the worker? Do not make a change to this file without a review from a DOM peer for that specific change!!! (or a JS peer for changes to ecmaGlobals)
[task 2019-04-04T12:58:20.483Z] 12:58:20 INFO - TEST-PASS | dom/workers/test/test_worker_interfaces.html | true: If this is failing: DANGER, are you sure you want to expose the new interface Proxy to all webpages as a property on the worker? Do not make a change to this file without a review from a DOM peer for that specific change!!! (or a JS peer for changes to ecmaGlobals)

Flags: needinfo?(robin)
Keywords: regression

Attempting to reproduce. Looks like GlobalObject::skipDeselectedConstructor is missing some cases to skip these constructors in non-nightly builds

Flags: needinfo?(robin)
Assignee: nobody → robin

Robin can this be landed?

Flags: needinfo?(robin)

(In reply to Andreea Pavel [:apavel] from comment #3)

Robin can this be landed?

Yes, this is ready to land

Flags: needinfo?(robin)
Keywords: checkin-needed

Pushed by apavel@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/57c5d5e19c71
Conditionally disable Big(U)Int64Array constructors. r=jwalden

Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: