Bug 1541873 - Conditionally disable Big(U)Int64Array constructors. r=jwalden

Differential Revision: https://phabricator.services.mozilla.com/D26391