js/src/vm/GlobalObject.cpp
@@ -102,6 +102,8 @@ bool GlobalObject::skipDeselectedConstructor(JSContext* cx, JSProtoKey key) {
     case JSProto_CountQueuingStrategy:
       return !cx->realm()->creationOptions().getStreamsEnabled();
 
+    case JSProto_BigInt64Array:
+    case JSProto_BigUint64Array:
     case JSProto_BigInt:
       return !cx->realm()->creationOptions().getBigIntEnabled();
 
